--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,44 @@
+@import url("https://fonts.googleapis.com/css2?family=Unbounded:wght@200..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* .logo {
+    font-family: "Unbounded", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 500;
+    font-style: normal;
+} */
+
+/* .logo {
+    font-family: "Orbitron", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 500;
+    font-style: normal;
+} */
+
+@font-face {
+    font-family: orb;
+    src: url(/public/fonts/Orbitron-Medium.ttf);
+}
+
+body {
+    overflow-y: scroll;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+    scrollbar-face-color: transparent;
+}
+
+::-webkit-scrollbar {
+    width: 0;
+}
+
+.logo {
+    font-family: orb;
+}
+
+.logoimg {
+    filter: brightness(0) invert(1);
+    transform: scaleX(-1);
+}
