--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -43,3 +43,13 @@ body {
     filter: brightness(0) invert(1);
     transform: scaleX(-1);
 }
+
+.emp-sidebar {
+    display: none;
+}
+
+@media (min-width: 768px) {
+    .emp-sidebar {
+        display: flex;
+    }
+}
